// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider defaultValue 1`] = `
<div
  className="mcore-slider"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "width": "10%",
          }
        }
      />
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={10}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "left": "10%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={10}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;

exports[`Slider disabled 1`] = `
<div
  className="mcore-slider mcore-slider--disabled"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "left": "0%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={0}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;

exports[`Slider marks 1`] = `
<div
  className="mcore-slider"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
      <span
        className="mcore-slider__line__dot mcore-slider__line__dot--active"
        key="0"
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <span
        className="mcore-slider__line__dot"
        key="26"
        style={
          Object {
            "left": "26%",
          }
        }
      />
      <span
        className="mcore-slider__line__dot"
        key="60"
        style={
          Object {
            "left": "60%",
          }
        }
      />
      <span
        className="mcore-slider__line__dot"
        key="100"
        style={
          Object {
            "left": "100%",
          }
        }
      />
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "left": "0%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={0}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;

exports[`Slider marks error 1`] = `
<div
  className="mcore-slider mcore-slider--marked"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "left": "0%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={0}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;

exports[`Slider max 1`] = `
<div
  className="mcore-slider"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "left": "0%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={0}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;

exports[`Slider min 1`] = `
<div
  className="mcore-slider"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "left": "0%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={0}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;

exports[`Slider shallows correctly 1`] = `
<div
  className="mcore-slider"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "left": "0%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={0}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;

exports[`Slider showMark 1`] = `
<div
  className="mcore-slider mcore-slider--marked"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
      <span
        className="mcore-slider__line__dot mcore-slider__line__dot--active"
        key="0"
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <span
        className="mcore-slider__line__dot"
        key="26"
        style={
          Object {
            "left": "26%",
          }
        }
      />
      <span
        className="mcore-slider__line__dot"
        key="60"
        style={
          Object {
            "left": "60%",
          }
        }
      />
      <span
        className="mcore-slider__line__dot"
        key="100"
        style={
          Object {
            "left": "100%",
          }
        }
      />
      <div
        className="mcore-slider__marks"
      >
        <span
          className="mcore-slider__mark"
          key="0"
          style={
            Object {
              "left": "0%",
            }
          }
        >
          0
        </span>
        <span
          className="mcore-slider__mark"
          key="26"
          style={
            Object {
              "left": "26%",
            }
          }
        >
          26
        </span>
        <span
          className="mcore-slider__mark"
          key="60"
          style={
            Object {
              "left": "60%",
            }
          }
        >
          60
        </span>
        <span
          className="mcore-slider__mark"
          key="100"
          style={
            Object {
              "left": "100%",
            }
          }
        >
          100
        </span>
      </div>
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "left": "0%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={0}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;

exports[`Slider step 1`] = `
<div
  className="mcore-slider"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "left": "0%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={0}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;

exports[`Slider value 1`] = `
<div
  className="mcore-slider"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "width": "10%",
          }
        }
      />
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={10}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "left": "10%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={10}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;

exports[`Slider vertical 1`] = `
<div
  className="mcore-slider mcore-slider--vertical"
>
  <div
    className="mcore-slider__content"
  >
    <div
      className="mcore-slider__line"
    >
      <div
        className="mcore-slider__line__bg"
        style={
          Object {
            "height": "0%",
          }
        }
      />
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        aria-orientation="vertical"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="mcore-slider__handle"
        role="slider"
        style={
          Object {
            "bottom": "0%",
          }
        }
      >
        <Tooltip
          arrowPointAtCenter={true}
          content={0}
          direction="top"
          hasArrow={true}
          onVisibleChange={[Function]}
          prefixCls="mcore-tooltip"
          trigger="manual"
          visible={false}
        >
          <div
            className="mcore-slider__handle__shadow"
          />
        </Tooltip>
      </div>
    </Drag>
  </div>
</div>
`;
